# nautilus_experiments

./: .gitignore  Makefile  README.md  build.py  experiments.code-workspace  pyproject.toml
core/: cbindgen.toml
core/src/: lib.rs
data/: data.pxd  data.pyx
data/rust/: core.pxd
experiments/core/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml
experiments/core/src/: cvec.rs  lib.rs  main.rs  string.rs
experiments/data/: data.pxd  data.pyx  objects.pxd  objects.pyx  string.pxd  string.pyx
experiments/data/rust/: core.pxd
test/: test.py
tests/: test.py  test_logging.py  test_objects.py  test_string.py
