[tool.poetry]
name = "nautilus_memory_bug_repro"
version = "0.0.1"
description = "A high-performance algorithmic trading platform and event-driven backtester"
authors = ["Nautech Systems <info@nautechsystems.io>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

[build-system]
requires = [
    "setuptools",
    "poetry-core>=1.3.2",
    "Cython==3.0.0a9",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
cython = "3.0.0a11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
