[package]
name = "core"
version = "0.1.0"
authors = ["Nautech Systems <info@nautechsystems.io>"]
edition = "2021"

[lib]
name = "core"
crate-type = ["rlib", "staticlib"]

[dependencies]
pyo3 = { version = "0.17.2" }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std", "time", "chrono", "local-time"] }
tracing = "0.1.37"
tracing-core = "0.1.31"
time = { version = "0.3.25", features = ["macros", "formatting"] }
chrono = "0.4.31"
once_cell = "1.18.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
cbindgen = "0.24.3"
