[package]
name = "core"
version = "0.1.0"
authors = ["Nautech Systems <info@nautechsystems.io>"]
edition = "2021"

[lib]
name = "core"
crate-type = ["rlib", "staticlib"]

[dependencies]
pyo3 = { version = "0.17.2" }
time = { version = "0.3.25", features = ["macros", "formatting"] }
chrono = "0.4.31"
once_cell = "1.18.0"
log = { version = "0.4.20", features = ["serde", "kv_unstable", "std"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
cbindgen = "0.24.3"
